--- a/csd/common/Gemfile
+++ b/csd/common/Gemfile
@@ -1,6 +1,4 @@
 source "https://rubygems.org"
 
-gem "metanorma", git: "https://github.com/riboseinc/metanorma"
-gem "metanorma-cli", git: "https://github.com/riboseinc/metanorma-cli"
-gem "metanorma-csd", git: "https://github.com/riboseinc/metanorma-csd"
-
+gem "metanorma"
+gem "metanorma-cli"
