--- a/csd/common/Gemfile
+++ b/csd/common/Gemfile
@@ -2,4 +2,4 @@ source "https://rubygems.org"
 
 gem "metanorma"
 gem "metanorma-cli"
-gem "metanorma-csd", git: "https://github.com/riboseinc/metanorma-csd", branch: "ronaldtse-new-prefix"
+#gem "metanorma-csd", git: "https://github.com/riboseinc/metanorma-csd"
