--- a/metanorma.env
+++ b/metanorma.env
@@ -1,3 +1,3 @@
-METANORMA_FORMATS=xml pdf html
-ENCRYPTION_LABEL=TODO
+METANORMA_FORMATS=xml pdf html doc
+ENCRYPTION_LABEL=cb08fc00c406
 COMMIT_AUTHOR_EMAIL=travis-ci@calconnect.org
